feat: added styling for auth pages and error pages

--- a/client/index.css
+++ b/client/index.css
@@ -1,20 +1,10 @@
 /* global styles */
-@import 'reset.css';
+@import "reset.css";
 @import "typography.css";
 
 /*.layout and view styling */
-@import '../server/layouts/base.css';
-@import '../server/views/index.css';
+@import "../server/layouts/base.css";
+@import "../server/views/index.css";
 
 /* component styling */
-@import '../server/components/card/card.css';
-
-body {
-  color: black;
-  max-width: 1440px;
-  margin: 0 auto;
-}
-
-main {
-  padding: 1rem;
-}
+@import "../server/components/card/card.css";
