--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -1,30 +1,22 @@
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {% block head %}
-    <title>{{ title }}</title>
-  {% endblock %}
-  {% if NODE_ENV == "development" %}
-    <script type="module" src="http://localhost:5173/@vite/client" defer></script>
-    <script type="module" src="http://localhost:5173/client/index.js" defer></script>
-  {% else %}
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% block head %}
+      <title>{{ title }}</title>
+    {% endblock %}
     <link rel="stylesheet" href="/index.css">
     <script src="/index.js" defer></script>
-  {% endif %}
-  {% block styles %}{% endblock %}
-  {% block scripts %}{% endblock %}
-</head>
+    {% block styles %}
+    {% endblock %}
+    {% block scripts %}
+    {% endblock %}
+  </head>
 
-<body>
-  {% comment %} <header>
-    Deze header staat op elke pagina
-  </header> {% endcomment %}
-  <main>
-    {% block content %}{% endblock %}
-  </main>
-  {% comment %} <footer>
-    Deze footer staat op elke pagina
-  </footer> {% endcomment %}
-</body>
+  <body>
+    <main>
+      {% block content %}
+      {% endblock %}
+    </main>
+  </body>
 </html>
