--- a/server/views/login.liquid
+++ b/server/views/login.liquid
@@ -12,12 +12,12 @@
         <fieldset>
           <label for="username">
             Username
-            <input type="text" name="username" id="username" placeholder="john_doe123" required>
+            <input type="text" name="username" id="username" placeholder="john_doe123" autocomplete="username" required>
           </label>
 
           <label for="password">
             Password
-            <input type="password" name="password" id="password" required>
+            <input type="password" name="password" id="password" autocomplete="current-password" required>
           </label>
 
           {% if error %}
