--- a/server/views/chat.liquid
+++ b/server/views/chat.liquid
@@ -54,9 +54,9 @@
           </svg>
         </button>
 
-        <a href="#" class="add-friends">
-          Add friends
-        </a>
+      {% comment %} <a href="#" class="add-friends">
+                  Add friends
+              </a> {% endcomment %}
       </article>
       <div class="chats">
         {% for chat in chats %}
@@ -69,9 +69,9 @@
                 <h3>{{ chat.otherUser.name }}</h3>
                 <p>{{ chat.lastMessage.text }}</p>
               </div>
-              <div class="unread-messages">
-                <p>3</p>
-              </div>
+            {% comment %} <div class="unread-messages">
+                                                                        <p>3</p>
+                                                              </div> {% endcomment %}
             {% comment %} TODO: PUT THE NUMBER OF UNREAD MESSAGES HERE {% endcomment %}
             </a>
           </article>
